--- a/src/Skeleton/Resource/Page/Index.twig
+++ b/src/Skeleton/Resource/Page/Index.twig
@@ -3,9 +3,8 @@
 <head>
     <meta charset="utf-8">
     <title>BEAR.Sunday</title>
-    <link href="/assets/css/bootstrap.css" rel="stylesheet">
-    <link href="/assets/css/bootstrap-responsive.css" rel="stylesheet">
-    <script src="/assets/js/jquery.js"></script>
+    <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.1.1/css/bootstrap-combined.min.css" rel="stylesheet">
+    <script src="//code.jquery.com/jquery-latest.js"></script>
 </head>
 <body>
 <div class="container"><h2>{{greeting}} (twig)</h2></div>
