update twig template

--- a/src/Resource/Page/Index.twig
+++ b/src/Resource/Page/Index.twig
@@ -3,9 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>BEAR.Sunday</title>
-    <link href="/assets/css/bootstrap.css" rel="stylesheet">
-    <link href="/assets/css/bootstrap-responsive.css" rel="stylesheet">
-    <script src="/assets/js/jquery.js"></script>
+    <link href="//netdna.bootstrapcdn.com/bootswatch/3.0.0/united/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
 <div class="container"><h2>{{greeting}} (twig)</h2></div>
