add 'template engine' section to twig template

--- a/src/Resource/Page/Index.twig
+++ b/src/Resource/Page/Index.twig
@@ -6,6 +6,9 @@
     <link href="//netdna.bootstrapcdn.com/bootswatch/3.0.0/united/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-<div class="container"><h2>{{greeting}} (twig)</h2></div>
+<div class="container">
+    <h2>{{greeting}}</h2>
+    <p>template engine: twig</p>
+</div>
 </body>
 </html>
